# cse230-final-project

./: .gitignore  CHANGELOG.md  Makefile  README.md  cse230-final-project.cabal  install_notes.md  kyle-readme-draft.md
app/: Main.hs  ShowImage.hs  ShowPrompt.hs  Test.hs
art/: camel.txt  cow.txt  haskell.txt  kangaroo.txt  lion.txt  monalisa.txt  monkey.txt  rhino.txt  rudolph.txt
src/: BigramPromptGen.hs  ImageGen.hs  PromptGen.hs  RandomPromptGen.hs  WordAnalysis.hs
training-text/: shakespeare.txt
