cabal-version:      2.4
name:               cse230-final-project
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             rkthomps
maintainer:         rkthomps@calpoly.edu

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
    CHANGELOG.md
    README.md

executable cse230-final-project
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules: ImageGen,
                   WordAnalysis

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:  microlens, 
                    microlens-th, 
                    microlens-mtl, 
                    brick, 
                    vty, 
                    directory,
                    MonadRandom,
                    filepath,
                    time,
                    text-zipper,
                    base ^>=4.17.2.0,
                    containers
    hs-source-dirs:   app, src
    default-language: Haskell2010


executable test-image 
    main-is:          ShowImage.hs

    -- Modules included in this executable, other than Main.
    other-modules: ImageGen,
                   WordAnalysis

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:  microlens, 
                    microlens-th, 
                    microlens-mtl, 
                    brick, 
                    vty, 
                    directory,
                    MonadRandom,
                    filepath,
                    time,
                    text-zipper,
                    base ^>=4.17.2.0,
                    containers
    hs-source-dirs:   app, src
    default-language: Haskell2010

-- library
--   exposed-modules:
--       Main
--       ShowImage
--       ImageGen
--       WordAnalysis
--   hs-source-dirs:
--       app
--       src

-- Test-Suite tests
--   type: exitcode-stdio-1.0
--   main-is: Test.hs
--   default-language: Haskell2010
--   build-depends:
--     base ^>= 4.17.2.0,
--     QuickCheck > 2.14,
--   hs-source-dirs: tests